<resources>
    <string name="app_name">Bravo Calendar</string>
    <string name="name">Name</string>
    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="createaccount">Create account</string>
    <string name="signup">Sign up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New to Bravo Calendar? Register</string>
    <string name="new_user">New to Bravo Calendar?</string>
    <string name="register_now">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profileimageview">profileImageView</string>
    <string name="eventsTitle">Events</string>
    <string name="profile_title">Edit Profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="hello">Hello</string>
    <string name="sign_out">Sign out</string>
    <string name="title_place_holder">Title</string>
    <string name="time_place_holder">14:00</string>
    <string name="create_event">Create Event</string>
    <string name="time">Time</string>
    <string name="event_title">Event title</string>
    <string name="create_event_lowercase">Create event</string>
</resources>
